trunk (2008-10-23)
==================

  - xxx [Ingeniweb]

0.5.3 (2008-10-23)
==================

  - fix regression in fetching current grounp [youenn] 
  - poundctl restart need to use the right config file as well [jensens]
  - In term of portability, bash scripts now use env to get their shell.
  - The poundctl script overrides the control binary present in $prefix/sbin.
    So are introduced options to fix that problem: (kiorky)

        - A `poundcontrol` script is added to wrap the real poundctl binary.
        - Customize the names of generated scripts.
          To use them, simply add  `poundctl-binary`, `poundrun-binary`,
          `poundcontrol-binary` to your options.

0.5.1 (2008-07-08)
==================

  - fix bug in fecthing current group [youenn]

0.5.0 (2008-07-07)
==================

  - rename iw.recipe.pound to plone.recipe.pound [youenn]
  - fix doctests [youenn]
  - add socket option [mathieu pasquet]
  - config recipe now additionally creates "poundrun" script
    which merely runs configured pound executable with correct configuration
    [rockyburt]
  - fetching current running user is now more robust [rockyburt]


0.4.1 (2008-07-02)
==================

  - fix Cheetah require [youenn]

0.4.0 (2008-06-26)
==================

  - add a ctl script (as plone.recipe.squid) [youenn]

0.3.0
=====

  - devide recipe in two part : build and config part [youenn]
  - add options to build (extra-options) [youenn]
  - add options to the config file (time-out, priority ...) [youenn]

0.2.0
=====

 - added a script to launch pound with the right conf file [tarek]

0.1.0
=====

 - Initial release [tarek]